--- a/src/pricing.html
+++ b/src/pricing.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="logo.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header class="main-header">
   <div class="header-left">
     <img class="logo" src="logo.png" alt="Logo">
@@ -15,57 +16,59 @@
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="pricing.html" class="active">Pricing</a>
-    <a href="generator.html" class="auth-protected">Generator</a>
-    <a href="mypages.html" class="auth-protected">My Pages</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="generator.html" class="auth-only">Generator</a>
+    <a href="my-pages.html" class="auth-only">My Pages</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a id="auth-link" href="login.html" class="btn small">Login</a>
+    <a id="auth-link" class="btn small" href="login.html">Login</a>
   </nav>
 </header>
 
-<main class="container">
-  <section class="section center">
-    <h1>Choose your plan</h1>
-    <p class="muted">Simulated checkout. Later, plug in Stripe/PayPal here.</p>
-  </section>
-
-  <section class="section grid-3 pricing">
-    <div class="card">
-      <h3>Basic</h3>
-      <div class="price">$10</div>
-      <ul>
-        <li>1 generated site (ZIP)</li>
-        <li>Core sections</li>
-        <li>Email support</li>
-      </ul>
-      <button class="btn buy-btn" data-plan="Basic">Buy Basic</button>
-    </div>
-    <div class="card">
-      <h3>Pro</h3>
-      <div class="price">$20</div>
-      <ul>
-        <li>1 generated site (ZIP)</li>
-        <li>Extra sections & fonts</li>
-        <li>Priority support</li>
-      </ul>
-      <button class="btn buy-btn" data-plan="Pro">Buy Pro</button>
-    </div>
-    <div class="card">
-      <h3>Premium</h3>
-      <div class="price">$50</div>
-      <ul>
-        <li>1 generated site (ZIP)</li>
-        <li>All sections & fonts</li>
-        <li>Dedicated support</li>
-      </ul>
-      <button class="btn buy-btn" data-plan="Premium">Buy Premium</button>
+<main class="pricing">
+  <section class="section">
+    <div class="container">
+      <h2 class="center">Choose your plan</h2>
+      <div class="grid-3 mt-24">
+        <div class="card center">
+          <div class="i">🌱</div>
+          <h3>Basic</h3>
+          <div class="price">$10 / mo</div>
+          <ul>
+            <li>Up to 1 generated site</li>
+            <li>Core sections</li>
+            <li>Email support</li>
+          </ul>
+          <button class="buy-btn" data-plan="Basic">Buy Basic</button>
+        </div>
+        <div class="card center">
+          <div class="i">🚀</div>
+          <h3>Pro</h3>
+          <div class="price">$20 / mo</div>
+          <ul>
+            <li>Up to 3 generated sites</li>
+            <li>Extra sections</li>
+            <li>Priority support</li>
+          </ul>
+          <button class="buy-btn" data-plan="Pro">Buy Pro</button>
+        </div>
+        <div class="card center">
+          <div class="i">👑</div>
+          <h3>Premium</h3>
+          <div class="price">$50 / mo</div>
+          <ul>
+            <li>Up to 10 generated sites</li>
+            <li>Advanced features</li>
+            <li>Premium support</li>
+          </ul>
+          <button class="buy-btn" data-plan="Premium">Buy Premium</button>
+        </div>
+      </div>
     </div>
   </section>
 </main>
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
 <script src="auth.js"></script>
-<script src="generator.js"></script>
 </body>
 </html>
