--- a/src/contact.html
+++ b/src/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="logo.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header class="main-header">
   <div class="header-left">
     <img class="logo" src="logo.png" alt="Logo">
@@ -16,33 +17,33 @@
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="pricing.html">Pricing</a>
-    <a href="generator.html" class="auth-protected">Generator</a>
-    <a href="mypages.html" class="auth-protected">My Pages</a>
+    <a href="generator.html" class="auth-only">Generator</a>
+    <a href="my-pages.html" class="auth-only">My Pages</a>
     <a href="about.html">About</a>
-    <a href="contact.html" class="active">Contact</a>
-    <a id="auth-link" href="login.html" class="btn small">Login</a>
+    <a href="contact.html">Contact</a>
+    <a id="auth-link" class="btn small" href="login.html">Login</a>
   </nav>
 </header>
 
-<main class="container">
+<main>
   <section class="section">
-    <h1>Contact us</h1>
-    <div class="form-card">
-      <form id="contact-form">
+    <div class="container">
+      <h2>Contact us</h2>
+      <form id="contact-form" class="form-card mt-24">
         <div class="form-row">
-          <label for="c-name">Name</label>
-          <input id="c-name" type="text" placeholder="Your name" required>
+          <label for="c-name">Your name</label>
+          <input id="c-name" type="text" placeholder="John Smith" required />
         </div>
         <div class="form-row">
           <label for="c-email">Email</label>
-          <input id="c-email" type="email" placeholder="you@example.com" required>
+          <input id="c-email" type="email" placeholder="john@example.com" required />
         </div>
         <div class="form-row">
           <label for="c-msg">Message</label>
           <textarea id="c-msg" placeholder="How can we help?" required></textarea>
         </div>
         <div class="form-actions">
-          <button class="btn" type="submit">Send</button>
+          <button type="submit" class="btn">Send message</button>
         </div>
       </form>
     </div>
@@ -51,12 +52,5 @@
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
 <script src="auth.js"></script>
-<script>
-  document.getElementById('contact-form').addEventListener('submit', e => {
-    e.preventDefault();
-    alert('Thanks! We will get back to you shortly.');
-    e.target.reset();
-  });
-</script>
 </body>
 </html>
